--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@ header:
   overlay_filter: "0.5"
   overlay_image: /assets/images/main-splash.jpg
   actions:
-    - label: "Download"
-      url: "https://github.com/mmistakes/minimal-mistakes/"
+    - label: "Check it out"
+      url: "https://foxler2010.github.io/blog"
   caption: "[Photo credit: Unsplash](https://unsplash.com)"
-excerpt: "Bacon ipsum dolor sit amet salami ham hock ham, hamburger corned beef short ribs kielbasa biltong t-bone drumstick tri-tip tail sirloin pork chop."
+excerpt: "Hey. I'm Drew, and this is my blog"
 intro: 
-  - excerpt: 'Nullam suscipit et nam, tellus velit pellentesque at malesuada, enim eaque. Quis nulla, netus tempor in diam gravida tincidunt, *proin faucibus* voluptate felis id sollicitudin. Centered with `type="center"`'
+  - excerpt: 'I like computers, raspberry pis, the game of Minecraft, and the Java coding language. Centered with `type="center"`'
 feature_row:
   - image_path: assets/images/unsplash-gallery-image-1-th.jpg
     alt: "placeholder image 1"
