--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ header:
   caption: "[Photo credit: Mary Rat/Unsplash](https://unsplash.com/@mary_ray)"
 excerpt: "Hey. I'm Drew, and this is my blog"
 intro: 
-  - excerpt: 'I like computers, raspberry pis, the game of Minecraft, and the Java coding language. Centered with `type="center"`'
+  - excerpt: 'I like computers, raspberry pis, the game of Minecraft, and the Java coding language.'
 feature_row:
   - image_path: assets/images/unsplash-gallery-image-1-th.jpg
     alt: "placeholder image 1"
