--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ header:
   actions:
     - label: "Check it out"
       url: "https://foxler2010.github.io/blog"
-  caption: "[Photo credit: Mary Rat/Unsplash](https://unsplash.com/@mary_ray)"
+  caption: "[Photo credit: Mary Ray/Unsplash](https://unsplash.com/@mary_ray)"
 excerpt: "Hey. I'm Drew, and this is my blog"
 intro: 
   - excerpt: 'I like computers, raspberry pis, the game of Minecraft, and the Java coding language.'
