--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@ feature_row4:
     btn_label: "Read More"
     btn_class: "btn--primary"
 ---
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/images/favicon.ico">
+  </head>
+</html>
 
 {% include feature_row id="intro" type="center" %}
 
