--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@ intro:
   - excerpt: '# **Projects**'
 feature_row:
   - image_path: assets/images/unsplash-gallery-image-1-th.jpg
-    alt: "placeholder image 1"
-    title: "Placeholder 1"
-    excerpt: "This is some sample content that goes here with **Markdown** formatting."
+    alt: "My Raspberry Pis"
+    title: "Raspberry Pis"
+    excerpt: "I have three Raspberry Pi 4s, and one Raspberry Pi 3B+"
+    url: "/projects/pis"
+    btn_label: "Check it out"
+    btn_class: "btn--primary"
   - image_path: /assets/images/unsplash-gallery-image-2-th.jpg
-    image_caption: "Image courtesy of [Unsplash](https://unsplash.com/)"
     alt: "placeholder image 2"
     title: "Placeholder 2"
     excerpt: "This is some sample content that goes here with **Markdown** formatting."
