--- a/index.html
+++ b/index.html
@@ -60,7 +60,15 @@ feature_row4:
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="shortcut icon" type="image/x-icon" href="/assets/images/favicon.ico">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-W5W07NRYH4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-W5W07NRYH4');
+</script>
   </head>
 </html>
 
